# EMS

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  INSTRUCTIONS.md  PLAN.md  PROGRESS.md  Readme.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0bd3259e2bd4_phase_5_approvals_and_evaluations.py  1861e1738425_phase_2_org_structure.py  4c4da7bb24be_phase_9b_account_lockout_fields.py  4fda2a9bd0fa_phase_1_auth_users_roles_refresh_tokens_.py  754b32c3632c_phase_4_attendance.py  8685fe462097_initial.py  b44c6a117db9_phase_6_self_appraisals_and_transfers.py  c77cd59823ee_phase_3_kpi_templates.py  d7c84014bc07_phase_7_incentive_runs_and_calculation_.py
backend/app/: main.py
backend/app/common/: audit.py  enums.py  errors.py  models.py  workflow.py
backend/app/core/: config.py  deps.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py
backend/scripts/: import_legacy.py  seed.py
backend/tests/: conftest.py
backend/tests/api/: test_attendance.py  test_audit.py  test_auth.py  test_employees.py  test_evaluations.py  test_health.py  test_incentives.py  test_kpi_templates.py  test_org.py  test_permissions_matrix.py  test_reports.py  test_transfers.py  test_workflow.py
backend/tests/unit/: test_attendance_importer.py  test_config.py  test_evaluations_scoring.py  test_evaluations_suggestions.py  test_import_legacy.py  test_incentives_engine.py  test_incentives_export.py  test_kpi_templates_seed_data.py  (+5 more)
(+198 files in other folders)
